[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/pixel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/PlasmaShip.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 20 )

[node name="PlasmaShip" type="Area2D" groups=["PlasmaShips"]]
collision_layer = 4
collision_mask = 72
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Pixel" type="Sprite" parent="."]
modulate = Color( 0.772549, 0.733333, 0.294118, 1 )
scale = Vector2( 20, 40 )
texture = ExtResource( 1 )

[node name="L_1" type="Position2D" parent="."]
position = Vector2( -17, 15 )

[node name="L_2" type="Position2D" parent="."]
position = Vector2( -17, 1 )

[node name="L_3" type="Position2D" parent="."]
position = Vector2( -17, -13 )

[node name="R_1" type="Position2D" parent="."]
position = Vector2( 17, 15 )

[node name="R_2" type="Position2D" parent="."]
position = Vector2( 17, 1 )

[node name="R_3" type="Position2D" parent="."]
position = Vector2( 17, -13 )

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="on_body_entered"]
